<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homeActivity"
    android:background="@color/white">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/homeMenu"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/logoTextpuzzle"
            android:textColor="@color/darkBrown"
            android:textSize="30sp"
            android:fontFamily="@font/clear_sans_bold"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/homeMenu"
        android:layout_marginTop="64dp"
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_newGame"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/btn_newGame"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:layout_margin="8dp"
            style="@style/btn_home" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_settings"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/btn_settings"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:layout_margin="8dp"
            style="@style/btn_home"
            android:visibility="gone"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_about"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/btn_about"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:layout_margin="8dp"
            style="@style/btn_home" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_exit"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/btn_exit"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:layout_margin="8dp"
            style="@style/btn_home" />

    </androidx.appcompat.widget.LinearLayoutCompat>
    
    <TextView
        android:layout_width="234dp"
        android:layout_height="32dp"
        android:text="@string/app_info"
        android:textColor="@color/darkBrown"
        android:textSize="12sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="28dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>