<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".aboutActivity"
    android:background="@color/white">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_logo"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:background="#081A73"
                android:src="@drawable/gita"
                android:scaleType="fitCenter"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:fontFamily="@font/clear_sans_bold"
        android:gravity="center"
        android:text="@string/about"
        android:textSize="40sp"
        android:textColor="@color/darkBrown"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_margin="8dp"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="match_parent"
            android:fontFamily="@font/clear_sans_light"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:textSize="12sp"
            android:text="@string/aboutText"
            android:textColor="@color/darkBrown"
            android:lineSpacingExtra="2sp"
            android:justificationMode="inter_word"/>

    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_back"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        style="@style/btn_home" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="56dp"/>

</androidx.appcompat.widget.LinearLayoutCompat>