<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gameActivity"
    android:background="@color/white">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/recordBoard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/instructionText">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/counter"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="0"
                android:textColor="@color/darkBrown"
                android:textSize="63sp"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/clear_sans_bold"
                android:gravity="center"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:clickable="true"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_height="match_parent"
                android:background="@drawable/bg_records"
                android:padding="4dp"
                android:layout_margin="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prev"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:fontFamily="@font/clear_sans_light"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/prevScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:textSize="21sp"
                    android:fontFamily="@font/clear_sans_medium"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:clickable="true"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_height="match_parent"
                android:background="@drawable/bg_records"
                android:padding="4dp"
                android:layout_margin="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/best"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:fontFamily="@font/clear_sans_light"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/bestScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:textSize="21sp"
                    android:fontFamily="@font/clear_sans_medium"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/instructionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/gameboard"
        android:text="@string/instructions"
        android:textColor="@color/lightBrown"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16sp"
        android:textSize="16sp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/gameboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:background="@drawable/bg_board"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/btn1"
            app:layout_constraintDimensionRatio="1:1"
            tools:text="1"
            style="@style/cells_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btn2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn5"/>

        <TextView
            android:id="@+id/btn2"
            app:layout_constraintDimensionRatio="1:1"
            tools:text="2"
            style="@style/cells_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/btn1"
            app:layout_constraintRight_toLeftOf="@id/btn3"
            app:layout_constraintBottom_toTopOf="@id/btn6"/>

        <TextView
            android:id="@+id/btn3"
            app:layout_constraintDimensionRatio="1:1"
            tools:text="3"
            style="@style/cells_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/btn2"
            app:layout_constraintRight_toLeftOf="@id/btn4"
            app:layout_constraintBottom_toTopOf="@id/btn7"/>

        <TextView
            android:id="@+id/btn4"
            app:layout_constraintDimensionRatio="1:1"
            tools:text="4"
            style="@style/cells_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/btn3"
            app:layout_constraintBottom_toTopOf="@id/btn8"/>

        <TextView
            android:id="@+id/btn5"
            app:layout_constraintDimensionRatio="1:1"
            tools:text="5"
            style="@style/cells_button"
            app:layout_constraintTop_toBottomOf="@id/btn1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btn6"
            app:layout_constraintBottom_toTopOf="@id/btn9"/>

        <TextView
            android:id="@+id/btn6"
            app:layout_constraintDimensionRatio="1:1"
            tools:text="6"
            style="@style/cells_button"
            app:layout_constraintTop_toBottomOf="@id/btn2"
            app:layout_constraintLeft_toRightOf="@id/btn5"
            app:layout_constraintRight_toLeftOf="@id/btn7"
            app:layout_constraintBottom_toTopOf="@id/btn10"/>

        <TextView
            android:id="@+id/btn7"
            app:layout_constraintDimensionRatio="1:1"
            tools:text="7"
            style="@style/cells_button"
            app:layout_constraintTop_toBottomOf="@id/btn3"
            app:layout_constraintLeft_toRightOf="@id/btn6"
            app:layout_constraintRight_toLeftOf="@id/btn8"
            app:layout_constraintBottom_toTopOf="@id/btn11"/>

        <TextView
            android:id="@+id/btn8"
            app:layout_constraintDimensionRatio="1:1"
            tools:text="8"
            style="@style/cells_button"
            app:layout_constraintTop_toBottomOf="@id/btn4"
            app:layout_constraintLeft_toRightOf="@id/btn7"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn12"/>

        <TextView
            android:id="@+id/btn9"
            app:layout_constraintDimensionRatio="1:1"
            tools:text="9"
            style="@style/cells_button"
            app:layout_constraintTop_toBottomOf="@id/btn5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btn10"
            app:layout_constraintBottom_toTopOf="@id/btn13"/>

        <TextView
            android:id="@+id/btn10"
            app:layout_constraintDimensionRatio="1:1"
            tools:text="10"
            style="@style/cells_button"
            app:layout_constraintTop_toBottomOf="@id/btn6"
            app:layout_constraintLeft_toRightOf="@id/btn9"
            app:layout_constraintRight_toLeftOf="@id/btn11"
            app:layout_constraintBottom_toTopOf="@id/btn14"/>

        <TextView
            android:id="@+id/btn11"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            tools:text="11"
            style="@style/cells_button"
            app:layout_constraintTop_toBottomOf="@id/btn7"
            app:layout_constraintLeft_toRightOf="@id/btn10"
            app:layout_constraintRight_toLeftOf="@id/btn12"
            app:layout_constraintBottom_toTopOf="@id/btn15"/>

        <TextView
            android:id="@+id/btn12"
            app:layout_constraintDimensionRatio="1:1"
            tools:text="12"
            style="@style/cells_button"
            app:layout_constraintTop_toBottomOf="@id/btn8"
            app:layout_constraintLeft_toRightOf="@id/btn11"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn16"/>


        <TextView
            android:id="@+id/btn13"
            app:layout_constraintDimensionRatio="1:1"
            tools:text="13"
            style="@style/cells_button"
            app:layout_constraintTop_toBottomOf="@id/btn9"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btn14"/>

        <TextView
            android:id="@+id/btn14"
            app:layout_constraintDimensionRatio="1:1"
            tools:text="14"
            style="@style/cells_button"
            app:layout_constraintTop_toBottomOf="@id/btn10"
            app:layout_constraintLeft_toRightOf="@id/btn13"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btn15"/>

        <TextView
            android:id="@+id/btn15"
            app:layout_constraintDimensionRatio="1:1"
            tools:text="15"
            style="@style/cells_button"
            app:layout_constraintTop_toBottomOf="@id/btn11"
            app:layout_constraintLeft_toRightOf="@id/btn14"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btn16"/>

        <TextView
            android:id="@+id/btn16"
            app:layout_constraintDimensionRatio="1:1"
            android:visibility="invisible"
            tools:visibility="visible"
            tools:text="16"
            style="@style/cells_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/btn15"
            app:layout_constraintTop_toBottomOf="@id/btn12"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gameboard">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_shuffle"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="60dp"
            android:text="@string/shuffle"
            style="@style/btn_home" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="60dp"
            android:layout_marginStart="8dp">

            <ImageButton
                android:id="@+id/btn_musicOn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/btn_home"
                android:src="@drawable/ic_speaker"/>

            <ImageButton
                android:id="@+id/btn_musicOff"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/btn_home"
                android:src="@drawable/ic_mute"/>

        </FrameLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>